@@ -1670,6 +1670,8 @@ class SQLObject(object):
         return NotImplemented
 
 
+    # (De)serialization (pickle, etc.)
+
     def __getstate__(self):
         if self.sqlmeta._perConnection:
             from pickle import PicklingError
@@ -1680,10 +1682,16 @@ class SQLObject(object):
         return d
 
     def __setstate__(self, d):
+        id = d['id']
+        cls = self.__class__
+        cache = self._connection.cache
+        if cache.get(id, cls) is not None:
+            raise ValueError(
+                "Cannot unpickle %s row with id=%s - the id already exists in the cache" % (cls.__name__, id))
         self.__init__(_SO_fetch_no_create=1)
         self._SO_writeLock = threading.Lock()
         self.__dict__.update(d)
-        self.__class__._connection.cache.put(self.id, self.__class__, self)
+        cache.created(id, cls, self)
 
 
 def setterName(name):
