@@ -10,7 +10,7 @@ News
 SQLObject 1.3.1
 ===============
 
-* A bugfix was ported from `SQLObject 1.2.3`_.
+* Two bugfixes were ported from `SQLObject 1.2.3`_.
 
 SQLObject 1.3.0
 ===============
@@ -31,7 +31,9 @@ SQLObject 1.2.3
 ===============
 
 * Fixed a minor bug in PostgreSQL introspection: VIEWs don't have
-  PRIMARY KEYs - use sqlmeta.idName as the key if there is no one.
+  PRIMARY KEYs - use sqlmeta.idName as the key.
+
+* Fixed a bug in cache handling while unpickling.
 
 SQLObject 1.2.2
 ===============
